kernel/tests/ui/invalid_dup.rs
use kernel::time_temperature_curve::impl_polyline_const::ImplPolylineConst;

const _INVALID_DUP: ImplPolylineConst<2> = ImplPolylineConst::from_array([(0.0, 1.0), (0.0, 2.0)]);

fn main() {}
